--- a/recovery/etc/lpm.rc
+++ b/recovery/etc/lpm.rc
@@ -34,23 +34,18 @@ on init
     write /sys/class/android_usb/android0/iSerial ${ro.serialno}
 
 on boot
-    # disable 3 CPUs to prevent heat for M7
-    write /sys/devices/system/cpu/cpu1/online 0
-    write /sys/devices/system/cpu/cpu2/online 0
-    write /sys/devices/system/cpu/cpu3/online 0
-    chmod 444 /sys/devices/system/cpu/cpu1/online
-    chmod 444 /sys/devices/system/cpu/cpu2/online
-    chmod 444 /sys/devices/system/cpu/cpu3/online
-
     start choice_fn
-
-service charger /sbin/charger
-    disabled
 
 service choice_fn /sbin/choice_fn
     disabled
 
+service detect_key /sbin/detect_key
+    disabled
+
 service offmode_charging /sbin/offmode_charging
+    disabled
+
+service power_test /sbin/power_test
     disabled
 
 service ueventd /sbin/ueventd
@@ -66,3 +61,4 @@ on property:service.adb.root=1
     write /sys/class/android_usb/android0/enable 0
     restart adbd
     write /sys/class/android_usb/android0/enable 1
+
