--- a/rootdir/etc/ueventd.qcom.rc
+++ b/rootdir/etc/ueventd.qcom.rc
@@ -74,6 +74,7 @@
 
 # wifi
 /dev/rfkill               0660  root         wifi
+/dev/wcnss_wlan           0600  system       system
 
 #permissions for video
 /dev/msm_vidc_reg         0660  system       audio
