--- a/rootdir/etc/ueventd.qcom.rc
+++ b/rootdir/etc/ueventd.qcom.rc
@@ -74,6 +74,7 @@
 
 # wifi
 /dev/rfkill               0660  root         wifi
+/dev/wcnss_wlan           0600  system       system
 
 #permissions for video
 /dev/msm_vidc_reg         0660  system       audio
@@ -135,6 +136,3 @@
 
 # AKM8963
 /dev/akm8963_dev          0660  system       system
-
-# Bluetooth
-/dev/btlock               0600  bluetooth    bluetooth
