t6: fixup external storage
Change-Id: Iadad0367225bae41be53ea76f904fdfcdefbc365

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -16,7 +16,7 @@ on init
     export EXTERNAL_STORAGE /storage/emulated/legacy
     export EMULATED_STORAGE_SOURCE /mnt/shell/emulated
     export EMULATED_STORAGE_TARGET /storage/emulated
-    export SECONDARY_STORAGE /storage/usbdisk
+    export SECONDARY_STORAGE /storage/sdcard2:/storage/usbdisk
 
     # for backwards compatibility
     symlink /storage/emulated/legacy /sdcard
