--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -209,7 +209,6 @@ on post-fs-data
     mkdir /tombstones/mdm 0771 system system
     mkdir /tombstones/modem 0771 system system
     mkdir /tombstones/lpass 0771 system system
-    mkdir /tombstones/wcnss 0771 system system
     mkdir /tombstones/dsps 0771 system system
 
     # QC audio/radio
@@ -274,6 +273,10 @@ on boot
     mkdir /data/misc/wifi/wpa_supplicant 0770 wifi wifi
     mkdir /data/misc/dhcp 0770 dhcp dhcp
     chown dhcp system /data/misc/dhcp
+
+    # create symlink to qcn wpa_supplicant folder
+    symlink /data/misc/wifi/wpa_supplicant /data/system/wpa_supplicant
+    symlink /dev/socket/wpa_wlan0 /data/system/wpa_supplicant/wlan0
 
     chown system system /sys/class/leds/green/brightness
     chown system system /sys/class/leds/green/blink
@@ -472,6 +475,12 @@ service iprenew_bt-pan /system/bin/dhcpcd -n
     disabled
     oneshot
 # End WiFi
+
+service fm_dl /system/bin/sh /system/etc/init.qcom.fm.sh
+    user root
+    group system qcom_oncrpc
+    disabled
+    oneshot
 
 service hciattach /system/bin/sh /system/etc/init.qcom.bt.sh
     user bluetooth
